--- a/styles/main.css
+++ b/styles/main.css
@@ -12,19 +12,27 @@ html {
 
 #grid {
 	display: grid;
-	grid-template-columns: repeat(16, minmax(50px, 1fr));
-	grid-template-rows: repeat(16, minmax(50px, 1fr));
-	grid-gap: 0.5em;
+	border-style: solid;
+	border-color: black;
+	border-width: thin;
+	margin: 50px;
+	grid-gap: 0.0em;
 }
 
 .tile {
-	background-color: blue;
+	background-color: white;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	width: 100%;
 	height: 0;
 	padding-bottom: 100%;
+}
+
+#button {
+	display: flex;
+	width: 100%;
+	justify-content: center;
 }
 
 
